# trailmate

./: .env.example  .gitignore  .trailmate_current_trip.json  CHANGELOG_REFACTOR.md  README.md  REVIEW.md  agentic_thoughts.md  app.py  myProposal.md  pyproject.toml  requirements.txt  search-israel-trails.skill  skill-review.html  trailmate-landing  copy.html  trailmate-landing .html
.agents/data/: nakeb_seed.json  tiuli_index.json  trails_seed.json
.claude/: settings.json
.cursor/skills/: PROJECT SKILL.md
docs/: architecture.md  spec.md
scripts/: enrich_nakeb.py  enrich_tiuli.py  nakeb_parser.py
src/trailmate/: __init__.py  __main__.py  agent_harness.py  context_manager.py  logging_config.py  tool_registry.py
supabase/: auth.sql  chat-sessions.sql  reminders.sql  schema.sql  telegram-link.sql  trails-enrich.sql  trails-nakeb.sql  trails-region-rank.sql  user-prefs.sql
tests/: test_agent_harness.py  test_context_manager.py  test_nakeb_parser.py  test_tiuli_parser.py  test_tool_registry.py
tests/fixtures/: nakeb_hike357.html  tiuli_track1.html
updates/: workshop-3-4.md
web/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  vitest.config.ts  vitest.smoke.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: About.tsx  Chat.tsx  Generating.tsx  IsraelMap.tsx  Notebook.tsx  Preferences.tsx  Sidebar.tsx  StepChecklist.tsx  Welcome.tsx
web/lib/: agent.ts  prefs.test.ts  prefs.ts  prompt.ts  supabase-browser.ts  supabase.ts  types.ts  useAgent.ts
web/scripts/: seed-nakeb.mjs  (+1 more)
(+104 files in other folders)
